syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

option csharp_namespace = "TelegramBot.Proto";

package telegramEvents;

service TelegramEventService {
  rpc AddReminder (Reminder) returns (ReminderOperationResponse);
  
  rpc RemoveReminder (Reminder) returns (ReminderOperationResponse);

  rpc ChangeReminder (Reminder) returns (ReminderOperationResponse);

  rpc GetReminders (UserRequest) returns (UserResponse);
}

message Reminder {
  int64 id = 1;
  int64 userId = 2;
  string name = 3;
  string description = 4;
  google.protobuf.Timestamp dateTime = 5;
  google.protobuf.Duration repeatPeriod = 6; 
}

message ReminderOperationResponse {
  int64 userId = 1;
  bool result = 2;
}

message UserRequest {
	int64 userId = 1;
}

message UserResponse {
	repeated Reminder reminders = 1;
}